
  Thy_Output.display            thy_output_display
  Thy_Output.quotes             thy_output_quotes
  Thy_Output.indent             thy_output_indent
  Thy_Output.source             thy_output_source
  Thy_Output.break              thy_output_break

Note that corresponding "..._default" references in ML may be only
changed globally at the ROOT session setup, but *not* within a theory.


*** Pure ***

* Support for real valued configuration options, using simplistic
floating-point notation that coincides with the inner syntax for
float_token.

* Support for real valued preferences (with approximative PGIP type).

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.

* Discontinued ancient 'constdefs' command.  INCOMPATIBILITY, use
'definition' instead.

* Document antiquotations @{class} and @{type} print classes and type
constructors.

* Document antiquotation @{file} checks file/directory entries within
the local file system.


*** HOL ***

* Functions can be declared as coercions and type inference will add them
as necessary upon input of a term. In Complex_Main, real :: nat => real
and real :: int => real are declared as coercions. A new coercion function
f is declared like this:

declare [[coercion f]]

To lift coercions through type constructors (eg from nat => real to
nat list => real list), map functions can be declared, e.g.

declare [[coercion_map map]]

Currently coercion inference is activated only in theories including real
numbers, i.e. descendants of Complex_Main. In other theories it needs to be
loaded explicitly: uses "~~/src/Tools/subtyping.ML"
