@@ -415,7 +415,7 @@ val _ = Context.>> (Context.map_theory
   register_config Unify.trace_simp_raw #>
   register_config Unify.trace_types_raw #>
   register_config MetaSimplifier.simp_depth_limit_raw #>
-  register_config MetaSimplifier.debug_simp_raw #>
-  register_config MetaSimplifier.trace_simp_raw));
+  register_config MetaSimplifier.simp_debug_raw #>
+  register_config MetaSimplifier.simp_trace_raw));
 
 end;
